--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
-imgs_paths:
-  imgs1: "/mnt/sda/coex_data/result_2024_11_22_144140_lifefourcut_3/"
-  imgs2: "/mnt/sda/coex_data/track_fail/result_2025_02_07_104112_olens/"
+file_paths:
+  file1: "/mnt/sda/coex_data/result_2024_11_22_144140_lifefourcut_3/"
+  file2: "/mnt/sda/coex_data/track_fail/result_2025_02_07_104112_olens/"
 
 filtered_csv_path: "./yolo_info_filtered.csv"
 
