--- a/Choosing4Images/config.yaml
+++ b/Choosing4Images/config.yaml
@@ -1,5 +1,5 @@
-file_path: "/mnt/sda/coex_data/long_sequence/result_2025_04_16_090537/"
-timestamp_saved_path: "/home/youngsun/vslam/corl/AllTimestamp/"
+file_path: "/mnt/sda/coex_data/long_sequence/result_2025_04_16_090110"
+timestamp_saved_path: "/home/youngsun/vslam/corl/AllTimestamp/ORB-SLAM2/2025_04_16/090110.txt"
 
 filtered_csv_yolo_path: "/home/youngsun/vslam/corl/Choosing4Images/info_filtered_yolo.csv"
 filtered_csv_ocr_path: "/home/youngsun/vslam/corl/Choosing4Images/info_filtered_ocr.csv"
@@ -15,7 +15,7 @@ hyperparameters:
 
   firstmap_thresh: 0.3
   firstmap_min_time_diff: 0.0
-  nextmap_thresh: 0.0
+  nextmap_thresh: 0.0 #여기서는 아니지만 avg thresh 0.1로 설정함
   
   image_selector_frames_per_sec: 3
   image_selector_max_interval: 3
