--- a/ConnectingMaps/config.yaml
+++ b/ConnectingMaps/config.yaml
@@ -1,14 +1,12 @@
-connecting_dir: /home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM2 # orb1 or orb2
-fail_index: 1
-final_trajectory_path: '/home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM2/2025_04_14/092728/yolo/8th//four_frame_result/0/txt/KeyFrameTrajectory0708_new.txt'
-firstmap_new_trajectory_path: '/home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM2/2025_04_14/092728/yolo/8th//four_frame_result/0/txt/KeyFrameTrajectory07_new.txt'
-firstmap_trajectory_path: '/mnt/sda/coex_data/long_sequence/result_2025_04_14_092728/orb2_result/KeyFrameTrajectory07.txt'
-nextmap_new_trajectory_path: '/home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM2/2025_04_14/092728/yolo/8th//four_frame_result/0/txt/KeyFrameTrajectory08_new.txt'
-nextmap_trajectory_path: '/mnt/sda/coex_data/long_sequence/result_2025_04_14_092728/orb2_result/KeyFrameTrajectory08.txt'
-
+connecting_dir: /home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM1
+date_str: '2025_04_14'
+final_trajectory_path: /home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM1/2025_04_14/092728/yolo/10th/four_frame_result/0/txt/KeyFrameTrajectory0910_new.txt
+firstmap_new_trajectory_path: ''
+firstmap_trajectory_path: /mnt/sda/coex_data/long_sequence/result_2025_04_14_092728/mono_result/KeyFrameTrajectory09.txt
+nextmap_new_trajectory_path: ''
+nextmap_trajectory_path: /mnt/sda/coex_data/long_sequence/result_2025_04_14_092728/mono_result/KeyFrameTrajectory10.txt
+out_path: /home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM1/2025_04_14/092728/connected_long.txt
 root_dir: /mnt/sda/coex_data/long_sequence
-date_str: 2025_04_14
-time_str: 092728
 sequences:
 - '00'
 - '01'
@@ -18,6 +16,9 @@ sequences:
 - '05'
 - '06'
 - '07'
-- '08'
-txt_input_path: '/home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM2/2025_04_14/092728/yolo/8th//four_frame_result/0/txt/images.txt'
-txt_parsed_path: '/home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM2/2025_04_14/092728/yolo/8th//four_frame_result/0/txt/images_parsed.txt'
+- 08
+- 09
+- '10'
+time_str: 092728
+txt_input_path: ''
+txt_parsed_path: /home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM1/2025_04_14/092728/yolo/10th/four_frame_result/0/txt/images_parsed.txt
