--- a/ConnectingMaps/config.yaml
+++ b/ConnectingMaps/config.yaml
@@ -1,11 +1,11 @@
 connecting_dir: /home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM1
-date_str: '2025_04_14'
-final_trajectory_path: /home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM1/2025_04_14/092728/yolo/10th/four_frame_result/0/txt/KeyFrameTrajectory0910_new.txt
-firstmap_new_trajectory_path: ''
-firstmap_trajectory_path: /mnt/sda/coex_data/long_sequence/result_2025_04_14_092728/mono_result/KeyFrameTrajectory09.txt
-nextmap_new_trajectory_path: ''
-nextmap_trajectory_path: /mnt/sda/coex_data/long_sequence/result_2025_04_14_092728/mono_result/KeyFrameTrajectory10.txt
-out_path: /home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM1/2025_04_14/092728/connected_long.txt
+date_str: '2025_04_16'
+final_trajectory_path: '/home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM1/2025_04_17/100354/yolo/1th//four_frame_result/0/txt/KeyFrameTrajectory0001_new.txt'
+firstmap_new_trajectory_path: '/home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM1/2025_04_17/100354/yolo/1th//four_frame_result/0/txt/KeyFrameTrajectory00_new.txt'
+firstmap_trajectory_path: '/mnt/sda/coex_data/short_sequence/result_2025_04_17_100354/mono_result/KeyFrameTrajectory00.txt'
+nextmap_new_trajectory_path: '/home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM1/2025_04_17/100354/yolo/1th//four_frame_result/0/txt/KeyFrameTrajectory01_new.txt'
+nextmap_trajectory_path: '/mnt/sda/coex_data/short_sequence/result_2025_04_17_100354/mono_result/KeyFrameTrajectory01.txt'
+out_path: /home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM1/2025_04_16/085911/connected_long.txt
 root_dir: /mnt/sda/coex_data/long_sequence
 sequences:
 - '00'
@@ -18,7 +18,6 @@ sequences:
 - '07'
 - 08
 - 09
-- '10'
-time_str: 092728
-txt_input_path: ''
-txt_parsed_path: /home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM1/2025_04_14/092728/yolo/10th/four_frame_result/0/txt/images_parsed.txt
+time_str: 085911
+txt_input_path: '/home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM1/2025_04_17/100354/yolo/1th//four_frame_result/0/txt/images.txt'
+txt_parsed_path: '/home/youngsun/vslam/corl/ConnectingMaps/ORB-SLAM1/2025_04_17/100354/yolo/1th//four_frame_result/0/txt/images_parsed.txt'
