--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 gdown==5.2.0
-numpy==2.1.1
+numpy==1.26.4
 pyyaml==6.0.2
-opencv-python==4.11
+opencv-python>=4.10
 scipy==1.15.2
-matplotlib==3.10.1
+matplotlib==3.8.4
 pandas==2.2.3
 ultralytics==8.3
 evo==1.31.1
